infra/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-crm-frontend
  labels:
    app: traffic-crm-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: traffic-crm-frontend
